# EchoBird

./: AGENTS.md  NOTICE  README.md  README.zh-CN.md  TRADEMARKS.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml  sync-version-manifest.yml
docs/: index.html
docs/ai-app-store/: index.html
docs/ai-app-store/zh/: index.html
docs/ai-game-store/: index.html
docs/ai-game-store/zh/: index.html
docs/api/model-directory/: index.json
docs/api/store/: models.json
docs/api/tools/install/: claudescience.json  grok.json  index.json  openscience.json
docs/api/version/: index.json
docs/courses/: cn.json  en.json
docs/pulse/: latest-24h.json  latest-7d-en.json  latest-7d.json
echobird_core/: Cargo.toml  LICENSE
echobird_core/assets/mother/: hints.json  system_prompt.md
echobird_core/assets/quick-actions/: install-git.md
echobird_core/src/: lib.rs
echobird_core/src/commands/: mod.rs  parasite_commands.rs  process_commands.rs  pulse_commands.rs  settings_commands.rs
echobird_core/src/services/: agent_loop.rs  ai_career.rs  codex_session_merge.rs  model_directory.rs  process_manager.rs  tool_config_manager.rs  tool_patcher.rs
echobird_core/src/services/anthropic_proxy/: messages_handler.rs
echobird_core/src/services/codex_proxy/: codex_binary.rs  config_manager.rs  content_mapper.rs  protocol_converter.rs  server.rs
echobird_core/src/services/codex_proxy/vendors/: glm.rs  mod.rs  qwen.rs
echobird_core/src/services/local_llm/: gpu.rs  model_store.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/quick-actions/: codex-plugins.md  detect-cuda.md  install-cuda.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai_career_commands.rs  bundled_commands.rs  tool_commands.rs
src-tauri/src/models/: tool.rs
src-tauri/src/services/: agent_loop.rs  agent_tools.rs  bundled_assets.rs  llm_client.rs  mod.rs  parasite.rs  process_manager.rs  pulse_archive.rs  self_update.rs  tool_config_manager.rs  tool_manager.rs  windows_path.rs
src-tauri/src/services/anthropic_proxy/: mod.rs
src-tauri/src/services/codex_proxy/: mod.rs  session_store.rs  stream_handler.rs  trace.rs
src-tauri/src/services/codex_proxy/vendors/: mimo.rs
src-tauri/src/services/local_llm/: custom_command.rs  mod.rs  proxy.rs  server.rs  types.rs
src-tauri/src/utils/: platform.rs
src/api/: localServer.ts  tauri.ts  types.ts
src/components/: ChangelogDialog.tsx  EffortPulse.tsx  ModelIdCombobox.tsx  SettingsDialog.tsx  Sidebar.tsx
src/components/cards/: ModelCard.tsx
src/data/: modelDirectory.json  officialEndpoints.ts
src/i18n/: en.ts  ja.ts  types.ts  zh-Hans.ts  zh-Hant.ts
src/pages/AiCourses/: AiCourses.tsx
src/pages/AiPulse/: AiPulse.tsx
src/pages/AppManager/: AppManagerComponents.tsx  AppManagerProvider.tsx  context.ts
src/pages/LocalServer/: LocalServer.tsx
src/pages/ModelNexus/: ModelNexus.tsx
src/pages/MotherAgent/: MotherAgentMain.tsx  MotherAgentProvider.tsx
src/pages/MyProjects/: MyProjects.tsx  index.ts
src/stores/: myProjectsStore.ts  navigationStore.ts
src/utils/: normalizeError.test.ts  normalizeUrl.test.ts  normalizeUrl.ts
tools/: README.md
tools/claudecode/: paths.json
tools/claudescience/: config.json  paths.json
tools/grok/: paths.json
tools/hermes/: paths.json
tools/kimicode/: paths.json
tools/openscience/: config.json  paths.json
