[package]
name = "echobird"
version = "5.4.8"
description = "The Nexus for Models, Agents & Vibe Coding"
authors = ["Echobird Team"]
license = "MIT"
repository = "https://echobird.ai/"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "echobird_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core. `tauri::generate_context!()` (in src/lib.rs) expands against
# this crate's CARGO_MANIFEST_DIR to find tauri.conf.json; the Builder,
# Manager, tray, and menu APIs are used throughout services/.
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }

# Tauri plugins. All are direct deps of this crate (which owns the
# tauri-build step) so tauri-build's permission validator resolves every
# capability in capabilities/*.json.
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
# Single-instance guard: focus the running window instead of spawning a
# second process when EchoBird is launched again (e.g. double-clicking the
# desktop shortcut while it's minimized to tray). Exposes no JS commands, so
# it needs no capability entry.
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Platform helpers
dirs = "6"
image = "0.25"

# SQLite — OpenCode's authoritative session store is `opencode.db`; its
# `storage/` JSON dir is vestigial (only legacy sessions), so we MUST read the
# db to get full history. `bundled` compiles SQLite from source (no system
# libsqlite3). Costs ~0.6 MB in the NSIS installer — worth it for correct data.
rusqlite = { version = "0.32", features = ["bundled"] }

# Crypto (API Key encryption)
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "gzip"], default-features = false }
url = "2"
rand = "0.8"
futures-util = "0.3"

# HTTP server for the Codex Responses↔Chat proxy (Rust rewrite of the
# old tools/codex/lib/*.cjs launcher). Binds 127.0.0.1:53682 as a
# background tokio task.
axum = "0.8"
tower = "0.5"
http-body-util = "0.1"
bytes = "1"
tokio-stream = "0.1"

# Time
chrono = "0.4"

# SSH client
async-ssh2-tokio = "0.12.2"

# Agent Loop (LLM streaming + cancellation)
reqwest-eventsource = "0.6"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

# Desktop UX
rfd = "0.17"
which = "8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_System_Com", "Win32_UI_Shell"] }
raw-window-handle = "0.6"
# Registry scan for tool detection — read DisplayName/InstallLocation/DisplayIcon
# from HKLM + HKCU Uninstall keys so we find apps installed to non-default paths.
winreg = "0.55"
